WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27727
Transformations have CSS values of DOMCSSValueList, not DOMWebkitCSSTransformationValue
https://bugs.webkit.org/show_bug.cgi?id=27727
Summary
Transformations have CSS values of DOMCSSValueList, not DOMWebkitCSSTransform...
Andy Matuschak
Reported
2009-07-27 11:39:31 PDT
Created
attachment 33561
[details]
Test case demonstrating the problem Overview: To parse a -webkit-transform property, the developer needs to be able to determine the types of transformations described within (translation, rotation, etc). There are definitions for an DOMWebkitCSSTransformationValue interface that would provide for this, but they're never actually provided by the DOM when queried. I'm encountering this problem when using Obj-C bindings, so it's possible that when queried via JS, this doesn't happen. Steps to reproduce: 1. Call getPropertyCSSValue("-webkit-transform") on an element with a transformation. 2. Examine the CSSValueList returned, note the type of each item. Actual results: The items are CSSValueLists. Expected results: The items should be WebkitCSSTransformationValues. See attached test case.
Attachments
Test case demonstrating the problem
(2.32 MB, application/octet-stream)
2009-07-27 11:39 PDT
,
Andy Matuschak
no flags
Details
Patch
(1.63 KB, patch)
2009-08-28 16:03 PDT
,
Simon Fraser (smfr)
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-07-27 12:27:02 PDT
kitClass(WebCore::CSSValue* impl) in DOMCSS.mm needs to be educated about different types of CSSValueLists, but I'm not sure if we should expand the list of CSSValue types in CSSValue.idl. It looks like this same problem would occur with CSSTimingFunctionValue, CSSUnicodeRangeValue, CSSBorderImageValue, CSSFontFaceSrcValue, CSSFunctionValue, CSSImageGeneratorValue, CSSReflectValue etc etc.
Simon Fraser (smfr)
Comment 2
2009-07-28 11:51:52 PDT
Dave Hyatt says to add a new CSSValueType for CSSTransformationValue
Simon Fraser (smfr)
Comment 3
2009-08-28 16:03:39 PDT
Created
attachment 38760
[details]
Patch
Mark Rowe (bdash)
Comment 4
2009-08-28 16:07:14 PDT
Comment on
attachment 38760
[details]
Patch r=me
Simon Fraser (smfr)
Comment 5
2009-08-28 16:08:24 PDT
http://trac.webkit.org/changeset/47877
Simon Fraser (smfr)
Comment 6
2009-08-31 12:01:39 PDT
Test added in
http://trac.webkit.org/changeset/47901
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug